--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 !.yarn/releases
 !.yarn/versions
 
+
+../node_modules/
+node_modules/
+
+
 # testing
 /coverage
 
@@ -41,3 +46,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/lib/generated/prisma
