--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^7.2.0",
+    "apexcharts": "^5.3.6",
     "framer-motion": "^12.23.26",
+    "lightweight-charts": "^5.1.0",
     "next": "16.1.0",
     "prisma": "^7.2.0",
     "react": "19.2.3",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0"
   },
