--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@prisma/client": "^7.2.0",
     "apexcharts": "^5.3.6",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.26",
     "lightweight-charts": "^5.1.0",
     "next": "16.1.0",
+    "node-fetch": "^2.7.0",
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-apexcharts": "^1.9.0",
