--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.26",
     "lightweight-charts": "^5.1.0",
+    "lucide-react": "^0.564.0",
     "next": "16.1.0",
     "node-fetch": "^2.7.0",
     "prisma": "^7.2.0",
