--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^7.2.0",
     "apexcharts": "^5.3.6",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "jsonwebtoken": "^9.0.3",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.564.0",
     "next": "16.1.0",
+    "next-themes": "^0.4.6",
     "node-fetch": "^2.7.0",
     "pg": "^8.18.0",
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-apexcharts": "^1.9.0",
     "react-dom": "19.2.3",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
